--- a/enhanced-form.html
+++ b/enhanced-form.html
@@ -4,133 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Enhanced HTML5 Form & Content</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 20px;
-      background-color: #f7f9fc;
-      color: #333;
-    }
-    header, main, section, footer {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 15px;
-    }
-    header {
-      text-align: center;
-      border-bottom: 3px solid #0077cc;
-      margin-bottom: 30px;
-    }
-    h1, h2, h3 {
-      color: #005a9c;
-    }
-    img, audio, video {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin: 10px 0;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    ul, ol {
-      margin: 15px 0;
-      padding-left: 30px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-      background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    th, td {
-      padding: 12px 15px;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-    th {
-      background-color: #0077cc;
-      color: white;
-    }
-    tr:hover {
-      background-color: #f1f7ff;
-    }
-    form {
-      background-color: #fff;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      margin-top: 20px;
-    }
-    fieldset {
-      border: 2px solid #0077cc;
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 20px;
-    }
-    legend {
-      font-weight: bold;
-      color: #005a9c;
-    }
-    .form-group {
-      margin-bottom: 15px;
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-      color: #444;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #0077cc;
-      box-shadow: 0 0 5px rgba(0,119,204,0.3);
-    }
-    input[type="radio"], input[type="checkbox"] {
-      width: auto;
-      margin-right: 8px;
-    }
-    .radio-group, .checkbox-group {
-      display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
-    .checkbox-group label, .radio-group label {
-      font-weight: normal;
-      display: flex;
-      align-items: center;
-    }
-    button {
-      background-color: #0077cc;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    button:hover {
-      background-color: #005a9c;
-    }
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      color: #666;
-      font-size: 0.9em;
-    }
-  </style>
 </head>
 <body>
+
   <header>
     <h1>Week2:Enhanced HTML5 Web Page</h1>
     <p>A demonstration of structured content, media, and a fully validated form.</p>
@@ -209,7 +85,8 @@
     <section>
       <h2>Embedded Media</h2>
       <h3>Sample Image</h3>
-      <img src="https://www.pexels.com/photo/close-up-photo-of-guy-fawkes-mask-685674/" alt="HTML5 Form Demo Placeholder Image" />
+      <img src="https://images.pexels.com/photos/28107143/pexels-photo-28107143/free-photo-of-a-person-holding-up-a-mask-with-a-mustache.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Close-up photo of a Guy Fawkes mask held by a hand">
+
       <h3>Audio Sample</h3>
       <audio controls>
         <source src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3" type="audio/mpeg">
@@ -230,7 +107,7 @@
         <fieldset>
           <legend>Personal Information</legend>
 
-          <div class="form-group">
+          <div>
             <label for="fullName">Full Name <span style="color: red;">*</span></label>
             <input 
               type="text" 
@@ -240,10 +117,10 @@
               required 
               autocomplete="name" 
               minlength="2" 
-              maxlength="100" />
+              maxlength="100">
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="email">Email Address <span style="color: red;">*</span></label>
             <input 
               type="email" 
@@ -251,10 +128,10 @@
               name="email" 
               placeholder="you@example.com" 
               required 
-              autocomplete="email" />
+              autocomplete="email">
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="phone">Phone Number</label>
             <input 
               type="tel" 
@@ -262,11 +139,11 @@
               name="phone" 
               placeholder="(254) 7123-4560 7" 
               pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}|$$[0-9]{3}$$ [0-9]{3}-[0-9]{4}|[0-9]{10}" 
-              autocomplete="tel" />
-            <small>Format: 254-7123-45670 </small>
+              autocomplete="tel">
+            <small>Format: 254-7123-45670</small>
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="dob">Date of Birth <span style="color: red;">*</span></label>
             <input 
               type="date" 
@@ -274,24 +151,24 @@
               name="dob" 
               required 
               min="1900-01-01" 
-              max="2010-12-31" />
+              max="2010-12-31">
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="website">Personal Website</label>
             <input 
               type="url" 
               id="website" 
               name="website" 
               placeholder="https://www.yourwebsite.com" 
-              autocomplete="url" />
+              autocomplete="url">
           </div>
         </fieldset>
 
         <fieldset>
           <legend>Account Preferences</legend>
 
-          <div class="form-group">
+          <div>
             <label for="username">Username <span style="color: red;">*</span></label>
             <input 
               type="text" 
@@ -302,10 +179,10 @@
               minlength="4" 
               maxlength="20" 
               pattern="[a-zA-Z0-9_]+" 
-              title="Only letters, numbers, and underscores allowed" />
+              title="Only letters, numbers, and underscores allowed">
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="password">Password <span style="color: red;">*</span></label>
             <input 
               type="password" 
@@ -315,10 +192,10 @@
               required 
               minlength="8" 
               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}" 
-              title="Must contain at least 8 characters, including uppercase, lowercase, number, and special symbol" />
+              title="Must contain at least 8 characters, including uppercase, lowercase, number, and special symbol">
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="confirmPassword">Confirm Password <span style="color: red;">*</span></label>
             <input 
               type="password" 
@@ -326,33 +203,29 @@
               name="confirmPassword" 
               placeholder="Re-enter your password" 
               required 
-              minlength="8" />
+              minlength="8">
           </div>
         </fieldset>
 
         <fieldset>
           <legend>Additional Details</legend>
 
-          <div class="form-group">
+          <div>
             <p><label><strong>Preferred Contact Method</strong></label></p>
-            <div class="radio-group">
-              <label><input type="radio" name="contactMethod" value="email" required> Email</label>
-              <label><input type="radio" name="contactMethod" value="phone"> Phone</label>
-              <label><input type="radio" name="contactMethod" value="text"> Text Message</label>
-            </div>
+            <label><input type="radio" name="contactMethod" value="email" required> Email</label>
+            <label><input type="radio" name="contactMethod" value="phone"> Phone</label>
+            <label><input type="radio" name="contactMethod" value="text"> Text Message</label>
           </div>
 
-          <div class="form-group">
+          <div>
             <p><label><strong>Interests (Select at least one)</strong></label></p>
-            <div class="checkbox-group">
-              <label><input type="checkbox" name="interests" value="webdev"> Web Development</label>
-              <label><input type="checkbox" name="interests" value="design"> UI/UX Design</label>
-              <label><input type="checkbox" name="interests" value="mobile"> Mobile Apps</label>
-              <label><input type="checkbox" name="interests" value="ai"> Artificial Intelligence</label>
-            </div>
+            <label><input type="checkbox" name="interests" value="webdev"> Web Development</label>
+            <label><input type="checkbox" name="interests" value="design"> UI/UX Design</label>
+            <label><input type="checkbox" name="interests" value="mobile"> Mobile Apps</label>
+            <label><input type="checkbox" name="interests" value="ai"> Artificial Intelligence</label>
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="country">Country</label>
             <select id="country" name="country" autocomplete="country">
               <option value="">-- Select a Country --</option>
@@ -365,7 +238,7 @@
             </select>
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="bio">Short Bio</label>
             <textarea 
               id="bio" 
@@ -379,43 +252,39 @@
 
         <fieldset>
           <legend>Terms & Conditions</legend>
-          <div class="form-group">
-            <div class="checkbox-group">
-              <label>
-                <input 
-                  type="checkbox" 
-                  id="agree" 
-                  name="agree" 
-                  required 
-                  aria-describedby="agree-error" />
-                I agree to the <a href="#" target="_blank"> Terms of Service </a> and <a href="#" target="_blank"> Privacy Policy</a>.
-              </label>
-            </div>
-            <div id="agree-error" style="color: red; font-size: 0.9em; display: none;">
-              You must agree to the terms to proceed.
-            </div>
+
+          <div>
+            <label>
+              <input 
+                type="checkbox" 
+                id="agree" 
+                name="agree" 
+                required>
+              I agree to the <a href="#" target="_blank">Terms of Service</a> and <a href="#" target="_blank">Privacy Policy</a>.
+            </label>
           </div>
 
-          <div class="form-group">
-            <label for="newsletter">Subscribe to Newsletter</label>
-            <input 
-              type="checkbox" 
-              id="newsletter" 
-              name="newsletter" 
-              checked 
-              aria-checked="true" />
+          <div>
+            <label>
+              <input 
+                type="checkbox" 
+                id="newsletter" 
+                name="newsletter" 
+                checked>
+              Subscribe to Newsletter
+            </label>
             <small>You'll receive updates by email (can be unsubscribed anytime).</small>
           </div>
 
-          <div class="form-group">
+          <div>
             <label for="referral">How did you hear about us?</label>
             <input 
               type="text" 
               id="referral" 
               name="referral" 
               readonly 
-              value="Referred through Social Media" 
-              title="This field is read-only" />
+              value="Referred through Social Media"
+              title="This field is read-only">
           </div>
         </fieldset>
 
@@ -426,7 +295,7 @@
 
   <footer>
     <p>&copy; 2025 Enhanced HTML5 Form Demo. All rights reserved.</p>
-    <p>This page demonstrates HTML5 semantic structure, media embedding, and form validation. </p>
+    <p>This page demonstrates HTML5 semantic structure, media embedding, and form validation.</p>
   </footer>
 </body>
 </html>
