--- a/enhanced-form.html
+++ b/enhanced-form.html
@@ -85,7 +85,7 @@
     <section>
       <h2>Embedded Media</h2>
       <h3>Sample Image</h3>
-      <img src="https://images.pexels.com/photos/28107143/pexels-photo-28107143/free-photo-of-a-person-holding-up-a-mask-with-a-mustache.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Close-up photo of a Guy Fawkes mask held by a hand">
+      <img src="https://images.pexels.com/photos/28107143/pexels-photo-28107143/free-photo-of-a-person-holding-up-a-mask-with-a-mustache.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="Close-up photo of a Guy Fawkes mask held by a hand" width="100" height="100">
 
       <h3>Audio Sample</h3>
       <audio controls>
